tests/specs/graph/fast_check/return_inference/value_return_err.txt
~~ {"workspaceFastCheck":true} ~~
# workspace_members
[
  {
    "base": "file:///",
    "nv": "@scope/a@1.0.0",
    "exports": {
      ".": "./mod.ts"
    }
  }
]

# mod.ts
export const a = () => {
  return 2;
}

export const b = function() {
  return 2;
}

export function c() {
  return 2;
}

export class D {
  d() {
    return 2;
  }
}

// TODO: we don't support this at all
// export const e = {
//   e() {
//     return 2;
//   }
// };

// TODO: we don't support this at all
// export const f = class {
//   f() {
//     return 2;
//   }
// };

# output
{
  "roots": [
    "file:///mod.ts"
  ],
  "modules": [
    {
      "kind": "esm",
      "size": 377,
      "mediaType": "TypeScript",
      "specifier": "file:///mod.ts"
    }
  ],
  "redirects": {}
}

Fast check file:///mod.ts:
  error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /mod.ts:1:14
    |
  1 | export const a = () => {
    |              ^ this function is missing an explicit return type
    |
    = hint: add an explicit return type to the function

    info: all functions in the public API must have an explicit return type
    docs: https://jsr.io/go/slow-type-missing-explicit-return-type
  error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /mod.ts:5:14
    |
  5 | export const b = function() {
    |              ^ this function is missing an explicit return type
    |
    = hint: add an explicit return type to the function

    info: all functions in the public API must have an explicit return type
    docs: https://jsr.io/go/slow-type-missing-explicit-return-type
  error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /mod.ts:9:17
    |
  9 | export function c() {
    |                 ^ this function is missing an explicit return type
    |
    = hint: add an explicit return type to the function

    info: all functions in the public API must have an explicit return type
    docs: https://jsr.io/go/slow-type-missing-explicit-return-type
  error[missing-explicit-return-type]: missing explicit return type in the public API
    --> /mod.ts:14:3
     |
  14 |   d() {
     |   ^ this function is missing an explicit return type
     |
     = hint: add an explicit return type to the function

    info: all functions in the public API must have an explicit return type
    docs: https://jsr.io/go/slow-type-missing-explicit-return-type
